fixed alignement user list

--- a/src/components/UsersBox/UsersList/UsersList.css
+++ b/src/components/UsersBox/UsersList/UsersList.css
@@ -2,6 +2,6 @@
   grid-area: 'usersList';
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   overflow-x: hidden;
 }
